--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A collection of Node-RED nodes for AWS.",
   "dependencies"  : {
     "aws-sdk": "^2.0.15",
-    "minimatch": "2.0.4"
+    "minimatch": "3.0.2",
+    "octicons": "4.3.0"
   },
   "repository": {
     "type": "git",
